another sidebar fix
it's been way too long since i did this.

--- a/css/header.css
+++ b/css/header.css
@@ -65,9 +65,6 @@
 #side {
   display: none;
 }
-#side:checked + .page-wrap .sidebar {
-  transform: translateX(25%);
-}
-#side:checked + .page-wrap .page-content {
+#side:checked + .sidebar {
   transform: translateX(25%);
 }
